--- a/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
+++ b/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
@@ -1,2 +1,2 @@
 - reply_type: text
-  text: Hello World!
+  text: Hi there! Thank you for deciding to join Workals. Before we start I'd like to let you know that I'm a bot, so if there are any problems or you have any suggestions you can email my maker, Diana, at diana@workals.com.  Are you ready to start?
