--- a/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
+++ b/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
@@ -4,7 +4,7 @@
   - reply_type: delay
   duration: 2
   - reply_type: text
-  text: "What would you like to register as?"
+  text: "What would you like to register as? Type your answer"
   suggestions:
     - text: "Mentor"
     - text: "Mentee"
