--- a/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
+++ b/code/diana-pavel/didi/bot/replies/hellos/say_hello.yml
@@ -1,11 +1,6 @@
 - reply_type: text
-  text: "Hi there! Thank you for deciding to join Workals.
-  Before we start I'd like to let you know that I'm a bot, so if there are any problems or you have any suggestions you can email my maker, Diana, at diana@workals.com."
+  text: "Hi there! Thank you for deciding to join Workals."
   - reply_type: delay
   duration: 2
   - reply_type: text
-  text: "What would you like to register as? Type your answer"
-  suggestions:
-    - text: "Mentor"
-    - text: "Mentee"
-    - text: "Both"
+  "Before we start I'd like to let you know that I'm a bot, so if there are any problems or you have any suggestions you can email my maker, Diana, at diana@workals.com."
