added the mentee flow

--- a/code/diana-pavel/didi/bot/replies/hellos/ask_type.yml
+++ b/code/diana-pavel/didi/bot/replies/hellos/ask_type.yml
@@ -1,5 +1,5 @@
  - reply_type: delay
-  duration: 2
+  duration: dynamic
   - reply_type: text
   text: "What would you like to register as? Type your answer"
   suggestions:
